hasqd/tests/coptest/simple/db/positive/006.sts
#!/bin/sh
$1/zdb < 006.inp
