hasqd/tests/coptest/simple/db/negative/003.sts
#!/bin/sh
$1/zdb < 003.inp
